--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
+  <title>A Happy Time</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -11,7 +11,7 @@
 
 
 <p>
-  Fork me? Fork you, <b>@Jerrax-code</b>
+  can Fork! Welcome <b>@shruti-codeworld</b>
 </p>
 
 </body>
